new changes are added